--- a/CSS/estilocuidador.css
+++ b/CSS/estilocuidador.css
@@ -1,15 +1,15 @@
 div{
-    margin: 100px;
+    margin: 100px auto;
 }
 
 form{
     display: inline-block;
     padding: 15px;
-    border-color: 2px solid rgb(40, 202, 121);
+    border-color: 2px solid #6FB892;
 }
 
 form h2, h3, legend{
-    font-family: 'JetBrains Mono', monospace;
+    font-family: 'Battambang', cursive;
 }
 
 a :active{
@@ -18,21 +18,20 @@ a :active{
 
 p{
     color: rgb(85, 85, 255);
-    font-family: 'Baloo 2', cursive;
     font-size: 18px;
+    font-family: 'Battambang', cursive;
 }
 
 button{
-    font-family: 'Baloo 2', cursive;
     cursor: pointer;
     width: 120px;
 }
 
 label{
     color: rgb(85, 85, 255);
-    font-family: 'Baloo 2', cursive;
     font-size: 15px;
     padding: 3px;
+    font-family: 'Battambang', cursive;
 }
 
 input[type="number"],input[type="text"],input[type="email"],input[type=""],
@@ -65,17 +64,18 @@ label[for=termos]{
 fieldset{
     padding: 20px;
     margin: 20px 0;
-    border: 3px solid rgb(119, 244, 110);
-    border-left: 20px solid rgb(119, 244, 110);
+    border: 3px solid #6FB892;
+    border-left: 20px solid #6FB892;
     display: inline-block;
 }
 
 legend{
-    background-color: rgb(119, 244, 110);
+    background-color: #6FB892;
     text-align: center;
     font-size: 28px;
     letter-spacing: 0.04em;
     padding: 10px;
+    border-radius: 35px;
 }
 
 select{
