correção de erros

--- a/CSS/estiloAvalIdoso.css
+++ b/CSS/estiloAvalIdoso.css
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 td ,th{
     border: 1px solid black;
     text-align: center;
@@ -24,7 +24,8 @@ textarea{
 
 fieldset{
     border-left: 25px solid #90D4FD;
-=======
+}
+
 td ,th{
     border: 1px solid black;
     text-align: center;
@@ -38,5 +39,4 @@ table, fieldset, td, th{
 #aviso{
     text-align: center;
     color: rgb(67, 91, 228);
->>>>>>> 4b765830437b59be60fb45d80d9909bc6cdda6c1
 }
