--- a/CSS/estiloHome.css
+++ b/CSS/estiloHome.css
@@ -1,3 +1,17 @@
+* {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+legend{
+    text-align: center;
+    border: 3px solid #89bbe8;
+    border-radius: 10px;
+}
+
+h4{
+    text-align: center;
+}
+
 .grid-container{
     display: grid;
     grid-template-columns: 25%;
@@ -14,9 +28,8 @@ a{
 }
 
 .itemss h4:hover{
-    background: rgb(130, 130, 130);
+    background: #eb8a1c;
     margin-left: 10px;
-    
 }
 
 .itemss .fotoss{
@@ -27,7 +40,7 @@ a{
     font-size: 18px;
     color: rgb(252, 248, 250);
     text-align: center;
-    background: rgb(185, 183, 183);
+    background: #89bbe8;
     width: 150px;
     float: left;
     position: relative;
