--- a/CSS/estilocuidador.css
+++ b/CSS/estilocuidador.css
@@ -1,5 +1,5 @@
 div{
-    margin: 100px auto;
+    margin: 300px;
 }
 
 form{
@@ -8,7 +8,8 @@ form{
     border-color: 2px solid #6FB892;
 }
 
-form h2, h3, legend{
+form h2, h3, p{
+    color: #848f7e;
     font-family: 'Battambang', cursive;
 }
 
@@ -17,18 +18,20 @@ a :active{
 }
 
 p{
-    color: rgb(85, 85, 255);
     font-size: 18px;
-    font-family: 'Battambang', cursive;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+*{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 button{
     cursor: pointer;
     width: 120px;
 }
 
 label{
-    color: rgb(85, 85, 255);
+    color: #CAD9C2;
     font-size: 15px;
     padding: 3px;
     font-family: 'Battambang', cursive;
@@ -37,7 +40,7 @@ label{
 input[type="number"],input[type="text"],input[type="email"],input[type=""],
 input[type="telephone"]{
     padding: 5px 5px 5px 15px;
-    border-color: rgb(4, 62, 13);
+    border: 1px solid #000;
     border-radius: 4px;
 }
 
@@ -67,6 +70,7 @@ fieldset{
     border: 3px solid #6FB892;
     border-left: 20px solid #6FB892;
     display: inline-block;
+    border-radius: 4px;
 }
 
 legend{
@@ -89,7 +93,7 @@ select{
 input[type="submit"]{
     text-align: center;
     font-size: 15px;
-    background-color: rgb(243, 134, 224);
+    background-color: #CA9FD4 ;
     padding: 5px;
     border-radius: 4px;
     border: 0;
