--- a/CSS/estiloPessoaRef.css
+++ b/CSS/estiloPessoaRef.css
@@ -1,39 +1,62 @@
 * {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-  
-  td{
+}
+
+h1, p{
+    text-align: center;
+}
+
+td,th {
     text-align: center;
     border: 1px solid #89bbe8;
     border-radius: 5px;
-    
-  }
-  
-  table {
+    -moz-border-radius: 5px;
+    padding: 5px;
+}
+
+table {
     margin: auto;
-  }
-  
-  input{
+}
+
+input[type=text], input[type=date] {
     padding: 5px 5px 5px 15px;
     border: 1px solid #89bbe8;
     border-radius: 4px;
-  }
-  
-  fieldset {
+    width: 160px;
+}
+
+#tNomeDaMãe,#tUF,#tPais,#tDeficiencia {
+    width: 230px;
+}
+
+#tUnidadeSaude,
+#tAlergia {
+    width: 280px
+}
+
+tr :hover {
+    background-color: #89bbe8;
+}
+
+fieldset {
     padding: 5px 5px 5px 15px;
     border: 1px solid #89bbe8;
     border-radius: 4px;
     border: 3px solid #89bbe8;
     border-left: 20px solid #89bbe8;
-  }
-  
-  legend {
+}
+
+legend {
     border: 3px solid #89bbe8;
     border-radius: 10px;
-  }
+}
 
-  p{
-    color:red;
-    background-color: yellow;
+button{
     text-align: center;
-  }
+    font-size: 15px;
+    background-color: #CAD9C2 ;
+    padding: 5px;
+    border-radius: 4px;
+    border: 0;
+    width: 150px;
+}
