--- a/CSS/estiloPeso.css
+++ b/CSS/estiloPeso.css
@@ -20,3 +20,38 @@ input[type="text"]{
     border: none;
     
 }
+
+.fielum{
+    padding: 20px;
+    margin: auto 400px;
+    border: 3px solid #89BBE8 ;
+    border-left: 20px solid #89BBE8 ;
+    display: inline-block;
+    width: 600px;
+    border-radius: 4px;
+}
+
+legend{
+    background-color: #89BBE8;
+    text-align: center;
+    font-size: 28px;
+    letter-spacing: 0.04em;
+    padding: 10px;
+}
+
+table .pesoSize{
+    width: 230px;
+ }
+
+ #tabela{
+    padding: 20px;
+    margin: auto 400px;
+    border: 3px solid #89BBE8 ;
+    display: inline-block;
+    width: 600px;
+    border-radius: 4px;
+ }
+
+ tr :hover{
+    background-color: rgb(111, 243, 250);
+}
